; ModuleID = '/home/carl/AnghaBench/FFmpeg/tools/extr_crypto_bench.c_run_lavu_twofish.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/tools/extr_crypto_bench.c_run_lavu_twofish.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.AVTWOFISH = type { i32 }

@run_lavu_twofish.twofish = internal global %struct.AVTWOFISH* null, align 8
@.str = private unnamed_addr constant [14 x i8] c"out of memory\00", align 1
@hardcoded_key = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32)* @run_lavu_twofish to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @run_lavu_twofish(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.AVTWOFISH*, %struct.AVTWOFISH** @run_lavu_twofish.twofish, align 8
  %8 = icmp ne %struct.AVTWOFISH* %7, null
  br i1 %8, label %14, label %9

9:                                                ; preds = %3
  %10 = call %struct.AVTWOFISH* (...) @av_twofish_alloc()
  store %struct.AVTWOFISH* %10, %struct.AVTWOFISH** @run_lavu_twofish.twofish, align 8
  %11 = icmp ne %struct.AVTWOFISH* %10, null
  br i1 %11, label %14, label %12

12:                                               ; preds = %9
  %13 = call i32 @fatal_error(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  br label %14

14:                                               ; preds = %12, %9, %3
  %15 = load %struct.AVTWOFISH*, %struct.AVTWOFISH** @run_lavu_twofish.twofish, align 8
  %16 = load i32, i32* @hardcoded_key, align 4
  %17 = call i32 @av_twofish_init(%struct.AVTWOFISH* %15, i32 %16, i32 128)
  %18 = load %struct.AVTWOFISH*, %struct.AVTWOFISH** @run_lavu_twofish.twofish, align 8
  %19 = load i32*, i32** %4, align 8
  %20 = load i32*, i32** %5, align 8
  %21 = load i32, i32* %6, align 4
  %22 = lshr i32 %21, 4
  %23 = call i32 @av_twofish_crypt(%struct.AVTWOFISH* %18, i32* %19, i32* %20, i32 %22, i32* null, i32 0)
  ret void
}

declare dso_local %struct.AVTWOFISH* @av_twofish_alloc(...) #1

declare dso_local i32 @fatal_error(i8*) #1

declare dso_local i32 @av_twofish_init(%struct.AVTWOFISH*, i32, i32) #1

declare dso_local i32 @av_twofish_crypt(%struct.AVTWOFISH*, i32*, i32*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
